--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "start": "parcel index.html",
+    "build":"parcel build index.html"
+  },
   "devDependencies": {
     "parcel": "^2.16.4"
   },
